--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
        
    <!--articles start-->
    <article>
-
-            <h2></h2>
+            <h2>SEKKUSU</h2>
             <p>Lorem ipsum dolor sit amet.</p>
             <p>Possimus, suscipit quos! Ipsa, tempora.</p>
             <p>Consequatur cum esse nemo eum!</p>
@@ -35,15 +34,8 @@
 
     </article>
     <hr>
-   
-   
-        <!--articles end-->      
-   <!--Content end-->
-</section>
-
-   <!--Footer start-->
-  <footer id="footer">
-      <h1>BAŞLIK</h1>
+    <article>
+        <h1>BAŞLIK</h1>
       <ol>
         <em><strong><li> Lorem, ipsum dolor.<ul></strong></em>
                 <li>Lorem ipsum dolor sit amet.</li>
@@ -77,8 +69,17 @@
             </ul>
         </li>
       </ol>
+    </article>
+        <!--articles end-->      
+   <!--Content end-->
+</section>
+
+   <!--Footer start-->
+  
+      
       <hr>
-      <img height="500px" width="900 px" src=C:\Users\ATO\Desktop\ödev\image\sekkusu.jpg alt="SEX">
+      <footer id="footer">
+      <img height="500px" width="900 px" src=C:\Users\ATO\Desktop\HTML\İlk_html_örnek\image\sekkusu.jpg alt="SEX">
     </footer>
 
  <!--Footer end-->
