--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,7 @@
                 </tr>
                 <tr>
                     <th>E-mail At</th>
-                    <th><a href="mailto:orospucocugu@gmail.com">orospucocugu@gmail.com</a></th>
+                    <th><a href="mailto:adamındibi@gmail.com">orospucocugu@gmail.com</a></th>
                     <th>Odit, et dolor!</th>
                 </tr>
                 <tr>
