--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       
       <hr>
       <footer id="footer">
-      <img height="500px" width="900 px" src=C:\Users\ATO\Desktop\HTML\İlk_html_örnek\image\sekkusu.jpg alt="SEX">
+      <img height="500px" width="900 px" src=https://picsum.photos alt="SEX">
     </footer>
 
  <!--Footer end-->
